--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mta-api",
-  "version": "1.0.0",
+  "name": "mta-realtime-subway-arrival-api-client",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
