Change arrivals to departures.
Previously surfacing arrivals led to bugs like where trains arrived at
City Hall but did not have a scheduled departure. Departure data is more
interesting and useful, so this library will switch to surfacing that
data.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mta-realtime-subway-arrival-client",
+  "name": "mta-realtime-subway-departures",
   "version": "0.0.4",
-  "description": "Access realtime subway arrival data for the New York City MTA subway system.",
+  "description": "Access realtime subway departure data for the New York City subway system.",
   "main": "index.js",
   "scripts": {
     "test": "node test.js",
