Modify API to use complexes rather than stations.
Stations are cumbersome to use, since you would need to specify two
stations for all trains at Essex St-Delancey St. Complexes represent
what we think of as a single "station."

The API has been simplified so only one complex can be requested with
each library call. The response now sorts departures by line as well as
direction. I think this will be an easier interface to work with for
most use cases (e.g. show me uptown trains at 2 Av).

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "array-unique": "^0.3.2",
     "csv-parse": "^2.5.0",
     "dotenv": "^6.0.0",
+    "mta-subway-complexes": "0.0.1",
+    "mta-subway-stations": "git+https://github.com/ericandrewlewis/mta-subway-stations.git",
     "node-fetch": "^2.1.2",
     "protobufjs": "^5.0.1"
   },
