Fix mta-subway-stations dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "csv-parse": "^2.5.0",
     "dotenv": "^6.0.0",
     "mta-subway-complexes": "0.0.1",
-    "mta-subway-stations": "git+https://github.com/ericandrewlewis/mta-subway-stations.git",
+    "mta-subway-stations": "0.0.2",
     "node-fetch": "^2.1.2",
     "protobufjs": "^5.0.1"
   },
